Fix a small text align issue (#5402)

--- a/packages/frontend/src/components/Settings/styles.module.scss
+++ b/packages/frontend/src/components/Settings/styles.module.scss
@@ -30,7 +30,7 @@ $settingsHeight: 40px;
   min-height: $settingsHeight;
   padding-inline-start: 30px;
   padding-inline-end: 30px;
-  text-align: inline-end;
+  text-align: inherit;
   width: 100%;
 
   &:hover {
